--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
 PORT=5000
-MONGO_URL="mongodb+srv://Jisu:Mnbvcxz13579@cluster0.twpa9jn.mongodb.net/?retryWrites=true&w=majority"
+MONGO_URL="mongodb://localhost:27017/editUS"
